syntax="proto3";

package Enrollment;
import "term.proto";
service EnrollmentService {
    rpc AddNewLessonInTerm(AddNewLessonInTermRequest)returns (AddNewLessonInTermResonse);
    rpc AddNewLessonTermForStudent(AddNewLessonTermForStudentRequest) returns (AddNewLessonTermForStudentResponse);
    rpc GetLessonsInTerm(GetLessonsInTermRequest) returns (GetLessonsInTermResponse);
    rpc GetStudentLessons(GetStudentLessonsRequest) returns (GetStudentLessonsResponse);
}

enum LessonStatus {
PASSED=0;
FAILED=1;
DELETED=2;
NOTCOMPLETED=3;
}
message AddNewLessonInTermRequest{
    string Term_id=1;
    string Lesson_id=2;
    string Class_id=3;
    string Teacher_id=4;
    string College_id=5;
    string Lesson_time=6;
}

message AddNewLessonInTermResonse{
    string Lesson_in_term_id=1;
    string Message =2;
    string Start_time=3;
}
message GetLessonsInTermRequest{
    string College_id=1;
    string Term_id=2;
    string Class_id=3;
    string Teacher_id=4;
    string Lesson_id=5;
}


message GetLessonsInTermItem{
    string College_name=1;
    string Lesson_name=2;
    int32 Tedad_vahed=3;
    string Class_id=4;
    string Lesson_time=5;
    string Teacher_name=6;
    string Teacher_lastname=7;
    string Term_year=8;
    Seasons termSeason=9;
}
message GetLessonsInTermResponse{
repeated GetLessonsInTermItem lessons=1 ;
}

message AddNewLessonTermForStudentRequest{
string Student_id=1;
string Lesson_in_term_id=2;

}
message AddNewLessonTermForStudentResponse{
string Message =2;
}
message GetStudentLessonsRequest {
    string Student_id=1;
}
message GetStudentLessonsItem {
    string Student_name=1;
    string Student_lastname=2;
    string Lesson_name=3;
    int32 TedadVahed=4;
    string Lesson_time=5;
    int32 Grade=6;
    LessonStatus status=7;
    string Teacher_name=8;
    string Teacher_lastname=9;
    string College_name=10;
    string Term_year=11;
    Seasons TermSeason=12;
}
message GetStudentLessonsResponse{
    repeated GetStudentLessonsItem Student_lessons=1;
}